# second-bazel-monorepo

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel
hello_world/: BUILD.bazel
pip-deps/: requirements.lock.txt  requirements.txt
server/calc_lib/: BUILD.bazel
server/calc_lib/test/: test_calculator.py
server/server/: BUILD.bazel  main.py
server/server/src/: app.py
tools/: BUILD.bazel  aspects.bzl
