module(
    name = "docker_python_monorepo",
    version = "1.0.0",
)

bazel_dep(name = "rules_python", version = "1.8.1")


python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.11")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi_deps",
    python_version = "3.11",
    requirements_lock = "//pip-deps:requirements.lock.txt",
)
use_repo(pip, "pypi_deps")

