module(
    name = "docker_python_monorepo",
    version = "1.0.0",
)

bazel_dep(name = "rules_python", version = "1.8.3")
bazel_dep(name = "rules_oci", version = "2.2.7")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "aspect_rules_py", version = "1.8.4")
bazel_dep(name = "rules_mypy", version = "0.40.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.13")

# register_toolchains(
#     "//tools:mac_python_toolchain",
#     "//tools:linux_python_toolchain",
# )

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    # experimental_index_url = "https://pypi.org/simple",
    hub_name = "pypi_deps",
    python_version = "3.13",
    requirements_lock = "//pip-deps:requirements.lock.txt",
    # target_platforms = [
        # "{os}_{arch}",
        # "linux_x86_64",
    # ],
)
use_repo(pip, "pypi_deps")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "ubuntu",
    image = "python",
    platforms = ["linux/amd64"],
    tag = "3.13-slim",
)
use_repo(oci, "ubuntu", "ubuntu_linux_amd64")

types = use_extension("@rules_mypy//mypy:types.bzl", "types")
types.requirements(
    name = "pip_types",
    pip_requirements = "@pypi_deps//:requirements.bzl",
    requirements_txt = "//pip-deps:requirements.lock.txt",
)
use_repo(types, "pip_types")
