load("@aspect_rules_py//py:defs.bzl", "py_binary", "py_image_layer", "py_library", "py_pytest_main", "py_pex_binary")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")

py_binary(
    name = "hello_world_with_deps",
    srcs = glob(["src/**/*.py"]),
    main = "src/main.py",
    deps = [
        "@pypi_deps//cowsay",
    ],
)

py_image_layer(
    name="hello_world_image_layer",
    binary=":hello_world_with_deps"
)

oci_image(
    name = "second_docker_image",
    base = "@ubuntu",
    entrypoint = ["/hello_world/hello_world_with_deps"],
    tars = [
        ":hello_world_image_layer",
    ],
)

oci_load(
    name = "second_docker_image_load",
    image = ":second_docker_image",
    repo_tags = ["second_hello_world_test:latest"],
)
