load(
    "@aspect_rules_py//py:defs.bzl",
    "py_library",
    "py_pytest_main",
    "py_test",
)

py_library(
    name = "calc_lib",
    srcs = glob(["src/**/*.py"]),
    visibility = ["//visibility:public"],
)

py_pytest_main(
    name = "__test__",
    deps = ["@pypi_deps//pytest"],
)

py_test(
    name = "calc_lib_test",
    size="small",
    srcs = glob(["test/**/*.py"]),
    deps = [":calc_lib", ":__test__"],
    main=":__test__.py",
    args=["-vv", "-s"],
)
